src/test/ui/generic-associated-types/issue-86787.stderr
error: missing required bound on `TRef`
  --> $DIR/issue-86787.rs:10:5
   |
LL |     type TRef<'a>;
   |     ^^^^^^^^^^^^^-
   |                  |
   |                  help: add the required where clause: `where Self: 'a`
   |
   = note: this bound is currently required to ensure that impls have maximum flexibility
   = note: we are soliciting feedback, see issue #87479 <https://github.com/rust-lang/rust/issues/87479> for more information

error: aborting due to previous error

